source/externs/X11/extensions/XIproto.d


struct xGetDeviceMotionEventsReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* always X_GetDeviceMotionEvents*/
    CARD16 length;
    Time start;
    Time stop;
    CARD8 deviceid;
    BYTE pad1, pad2, pad3;
}

struct xGetDeviceMotionEventsReply {
    CARD8 repType;	/* X_Reply */
    CARD8 RepType;        /* always X_GetDeviceMotionEvents  */
    CARD16 sequenceNumber;
    CARD32 length;
    CARD32 nEvents;
    CARD8 axes;
    CARD8 mode;
    BYTE pad1, pad2;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
}

/*********************************************************
 *
 * ChangeKeyboardDevice.
 *
 */

struct xChangeKeyboardDeviceReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* X_ChangeKeyboardDevice	*/
    CARD16 length;
    CARD8 deviceid;
    BYTE pad1, pad2, pad3;
}

struct xChangeKeyboardDeviceReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;        /* always X_ChangeKeyboardDevice*/
    CARD16 sequenceNumber;
    CARD32 length;		/* 0 */
    CARD8 status;
    BYTE pad1, pad2, pad3;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    CARD32 pad05;
    }

/*********************************************************
 *
 * ChangePointerDevice.
 *
 */

struct xChangePointerDeviceReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* X_ChangePointerDevice	*/
    CARD16 length;
    CARD8 xaxis;
    CARD8 yaxis;
    CARD8 deviceid;
    BYTE pad1;
}

struct xChangePointerDeviceReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;        /* always X_ChangePointerDevice */
    CARD16 sequenceNumber;
    CARD32 length;		/* 0 */
    CARD8 status;
    BYTE pad1, pad2, pad3;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    CARD32 pad05;
    }

/*********************************************************
 *
 * GrabDevice.
 *
 */

struct xGrabDeviceReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* always X_GrabDevice */
    CARD16 length;
    Window grabWindow;
    Time time;
    CARD16 event_count;
    CARD8 this_device_mode;
    CARD8 other_devices_mode;
    BOOL ownerEvents;
    CARD8 deviceid;
    CARD16 pad01;
}

struct xGrabDeviceReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;        /* always X_GrabDevice	*/
    CARD16 sequenceNumber;
    CARD32 length;		/* 0 */
    CARD8 status;
    BYTE pad1, pad2, pad3;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    CARD32 pad05;
    }

/*********************************************************
 *
 * UngrabDevice.
 *
 */

struct xUngrabDeviceReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* always X_UnGrabDevice	*/
    CARD16 length;
    Time time;
    CARD8 deviceid;
    BYTE pad1, pad2, pad3;
}

/*********************************************************
 *
 * GrabDeviceKey.
 *
 */

struct xGrabDeviceKeyReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* always X_GrabDeviceKey	*/
    CARD16 length;
    Window grabWindow;
    CARD16 event_count;
    CARD16 modifiers;
    CARD8 modifier_device;
    CARD8 grabbed_device;
    CARD8 key;
    BYTE this_device_mode;
    BYTE other_devices_mode;
    BOOL ownerEvents;
    BYTE pad1, pad2;
}

/*********************************************************
 *
 * UngrabDeviceKey.
 *
 */

struct xUngrabDeviceKeyReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* always X_UngrabDeviceKey	*/
    CARD16 length;
    Window grabWindow;
    CARD16 modifiers;
    CARD8 modifier_device;
    CARD8 key;
    CARD8 grabbed_device;
    BYTE pad1, pad2, pad3;
}

/*********************************************************
 *
 * GrabDeviceButton.
 *
 */

struct xGrabDeviceButtonReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* always X_GrabDeviceButton	*/
    CARD16 length;
    Window grabWindow;
    CARD8 grabbed_device;
    CARD8 modifier_device;
    CARD16 event_count;
    CARD16 modifiers;
    BYTE this_device_mode;
    BYTE other_devices_mode;
    CARD8 button;
    BOOL ownerEvents;
    BYTE pad1, pad2;
}

/*********************************************************
 *
 * UngrabDeviceButton.
 *
 */

struct xUngrabDeviceButtonReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* always X_UngrabDeviceButton	*/
    CARD16 length;
    Window grabWindow;
    CARD16 modifiers;
    CARD8 modifier_device;
    CARD8 button;
    CARD8 grabbed_device;
    BYTE pad1, pad2, pad3;
}

/*********************************************************
 *
 * AllowDeviceEvents.
 *
 */

struct xAllowDeviceEventsReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* always X_AllowDeviceEvents	*/
    CARD16 length;
    Time time;
    CARD8 mode;
    CARD8 deviceid;
    BYTE pad1, pad2;
}

/*********************************************************
 *
 * GetDeviceFocus.
 *
 */

struct xGetDeviceFocusReq {
    CARD8 reqType;        /* input extension major code   */
    CARD8 ReqType;        /* always X_GetDeviceFocus	*/
    CARD16 length;
    CARD8 deviceid;
    BYTE pad1, pad2, pad3;
}

struct xGetDeviceFocusReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;        /* always X_GetDeviceFocus	*/
    CARD16 sequenceNumber;
    CARD32 length;
    CARD32 focus;
    Time time;
    CARD8 revertTo;
    BYTE pad1, pad2, pad3;
    CARD32 pad01;
    CARD32 pad02;
    CARD32 pad03;
    }

/*********************************************************
 *
 * SetDeviceFocus.
 *
 */

struct xSetDeviceFocusReq {
    CARD8 reqType;        /* input extension major code   */
    CARD8 ReqType;        /* always X_SetDeviceFocus	*/
    CARD16 length;
    Window focus;
    Time time;
    CARD8 revertTo;
    CARD8 device;
    CARD16 pad01;
}

/*********************************************************
 *
 * GetFeedbackControl.
 *
 */

struct xGetFeedbackControlReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* X_GetFeedbackControl	*/
    CARD16 length;
    CARD8 deviceid;
    BYTE pad1, pad2, pad3;
}

struct xGetFeedbackControlReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;        /* always X_GetFeedbackControl	*/
    CARD16 sequenceNumber;
    CARD32 length;
    CARD16 num_feedbacks;
    CARD16 pad01;
    CARD32 pad02;
    CARD32 pad03;
    CARD32 pad04;
    CARD32 pad05;
    CARD32 pad06;
}

struct xFeedbackState {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;	/* feedback class		*/
} else {
    CARD8 class_;		/* feedback class		*/
}
    CARD8 id;		/* feedback id		*/
    CARD16 length;		/* feedback length		*/
}

struct xKbdFeedbackState {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;
} else {
    CARD8 class_; 
}
    CARD8 id;
    CARD16 length;
    CARD16 pitch;
    CARD16 duration;
    CARD32 led_mask;
    CARD32 led_values;
    BOOL global_auto_repeat;
    CARD8 click;
    CARD8 percent;
    BYTE pad;
    BYTE[32] auto_repeats;
}

struct xPtrFeedbackState {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;
} else {
    CARD8 class_;
}
    CARD8 id;
    CARD16 length;
    CARD8 pad1, pad2;
    CARD16 accelNum;
    CARD16 accelDenom;
    CARD16 threshold;
}

struct xIntegerFeedbackState {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;	/* feedback class id		*/
} else {
    CARD8 class_;		/* feedback class id		*/
}
    CARD8 id;
    CARD16 length;		/* feedback length		*/
    CARD32 resolution;
    INT32 min_value;
    INT32 max_value;
}

struct xStringFeedbackState {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;	/* feedback class id		*/
} else {
    CARD8 class_;		/* feedback class id		*/
}
    CARD8 id;
    CARD16 length;		/* feedback length		*/
    CARD16 max_symbols;
    CARD16 num_syms_supported;
}

struct xBellFeedbackState {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;	/* feedback class id		*/
} else {
    CARD8 class_;		/* feedback class id		*/
}
    CARD8 id;
    CARD16 length;		/* feedback length		*/
    CARD8 percent;
    BYTE pad1, pad2, pad3;
    CARD16 pitch;
    CARD16 duration;
}

struct xLedFeedbackState {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;	/* feedback class id		*/
} else {
    CARD8 class_;		/* feedback class id		*/
}
    CARD8 id;
    CARD16 length;		/* feedback length		*/
    CARD32 led_mask;
    CARD32 led_values;
}

/*********************************************************
 *
 * ChangeFeedbackControl.
 *
 */

struct xChangeFeedbackControlReq {
    CARD8 reqType;	/* input extension major code	*/
    CARD8 ReqType;        /* X_ChangeFeedbackControl	*/
    CARD16 length;
    CARD32 mask;
    CARD8 deviceid;
    CARD8 feedbackid;
    BYTE pad1, pad2;
}

struct xFeedbackCtl {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;	/* feedback class id		*/
} else {
    CARD8 class_;		/* feedback class id		*/
}
    CARD8 id;		/* feedback id		*/
    CARD16 length;		/* feedback length		*/
}

struct xKbdFeedbackCtl {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;	/* feedback class id		*/
} else {
    CARD8 class_;		/* feedback class id		*/
}
    CARD8 id;		/* feedback length		*/
    CARD16 length;		/* feedback length		*/
    KeyCode key;
    CARD8 auto_repeat_mode;
    INT8 click;
    INT8 percent;
    INT16 pitch;
    INT16 duration;
    CARD32 led_mask;
    CARD32 led_values;
}

struct xPtrFeedbackCtl {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;	/* feedback class id		*/
} else {
    CARD8 class_;		/* feedback class id		*/
}
    CARD8 id;		/* feedback id		*/
    CARD16 length;		/* feedback length		*/
    CARD8 pad1, pad2;
    INT16 num;
    INT16 denom;
    INT16 thresh;
}

struct xIntegerFeedbackCtl {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;	/* feedback class id		*/
} else {
    CARD8 class_;		/* feedback class id		*/
}
    CARD8 id;		/* feedback id		*/
    CARD16 length;		/* feedback length		*/
    INT32 int_to_display;
}

struct xStringFeedbackCtl {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;	/* feedback class id		*/
} else {
    CARD8 class_;		/* feedback class id		*/
}
    CARD8 id;		/* feedback id		*/
    CARD16 length;		/* feedback length		*/
    CARD8 pad1, pad2;
    CARD16 num_keysyms;
}

struct xBellFeedbackCtl {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;	/* feedback class id		*/
} else {
    CARD8 class_;		/* feedback class id		*/
}
    CARD8 id;		/* feedback id		*/
    CARD16 length;		/* feedback length		*/
    INT8 percent;
    BYTE pad1, pad2, pad3;
    INT16 pitch;
    INT16 duration;
}

struct xLedFeedbackCtl {
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;	/* feedback class id		*/
} else {
    CARD8 class_;		/* feedback class id		*/
}
    CARD8 id;		/* feedback id		*/
    CARD16 length;		/* feedback length		*/
    CARD32 led_mask;
    CARD32 led_values;
}

/*********************************************************
 *
 * GetDeviceKeyMapping.
 *
 */

struct xGetDeviceKeyMappingReq {
    CARD8 reqType;        /* input extension major code   */
    CARD8 ReqType;	/* always X_GetDeviceKeyMapping */
    CARD16 length;
    CARD8 deviceid;
    KeyCode firstKeyCode;
    CARD8 count;
    BYTE pad1;
}

struct xGetDeviceKeyMappingReply {
    CARD8 repType;	/* X_Reply			*/
    CARD8 RepType;	/* always X_GetDeviceKeyMapping */
    CARD16 sequenceNumber;
    CARD32 length;
    CARD8 keySymsPerKeyCode;
    CARD8 pad0;
    CARD16 pad1;
    CARD32 pad2;
    CARD32 pad3;
    CARD32 pad4;
    CARD32 pad5;
    CARD32 pad6;
}
